Fontmap displaying unicode characters above 128 incorrectly. #38325

Closed
opened 2014-01-22 22:05:37 +01:00 by David Lugg · 7 comments

System Information
Windows 8 Pro
nVidia GeForce GTX 570

Blender Version
Broken: Tested on 2.50 (alpha), 2.59, 2.69
Worked: 2.49b

Short description of error
Unicode characters above 128 ( I think ) using fontmaps display two incorrect glyphs rather than the one desired glyph.
See the double "@" in this image where one unicode char was used (\u0101):
http://blenderartists.org/forum/attachment.php?attachmentid=283941&d=1390182473

Exact steps for others to reproduce the error
Create font map object. Create a python script and assign a unicode character to "Text" property, e.g. "\u00e8" for Latin Small Letter E With Grave. Run the game engine.

**System Information** Windows 8 Pro nVidia GeForce GTX 570 **Blender Version** Broken: Tested on 2.50 (alpha), 2.59, 2.69 Worked: 2.49b **Short description of error** Unicode characters above 128 ( I think ) using fontmaps display two incorrect glyphs rather than the one desired glyph. See the double "@" in this image where one unicode char was used (\u0101): http://blenderartists.org/forum/attachment.php?attachmentid=283941&d=1390182473 **Exact steps for others to reproduce the error** Create font map object. Create a python script and assign a unicode character to "Text" property, e.g. "\u00e8" for Latin Small Letter E With Grave. Run the game engine.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @thedave

Added subscriber: @thedave
Author

glyph_demonstration.blend

Example of bug.

[glyph_demonstration.blend](https://archive.blender.org/developer/F72797/glyph_demonstration.blend) Example of bug.

This issue was referenced by blender/blender-addons-contrib@2f46ed5564

This issue was referenced by blender/blender-addons-contrib@2f46ed5564ffb3d0550b09ee905bd37decb4a4b6

This issue was referenced by 2f46ed5564

This issue was referenced by 2f46ed5564ffb3d0550b09ee905bd37decb4a4b6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2f46ed5564.

Closed by commit 2f46ed5564.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38325
No description provided.