Fix T38325: Game Engine Bitmap fonts failed for characters >128